##Text encoding: utf-8

2008-10-31  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post branching version bump (0.11.0).
	* others: start implementing the new canvas and make things compile
	without libgnomecanvas.

2008-10-31  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: changed version to 0.10.0 for release.
	* libs/gcp/fragment-atom.h: fixed API documentation.
	* libs/gcp/text.h: ditto.
	* libs/gcp/view.h: add missing API documentation.

2008-10-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/table/gchemtable-app.cc: implement save as image for curves.
	* programs/table/gchemtable-app.h: ditto.
	* programs/table/gchemtable-curve.cc: ditto.
	* programs/table/gchemtable-curve.h: ditto.

2008-10-25  Jordan Mantha  <laserjock@ubuntu.com>
        * docs/help/spectra/C/gspectrum.xml: miscellaneous typo and style fixes.
          Also changed mixed DOS/Unix line endings to Unix.

2008-10-24  Jordan Mantha  <laserjock@ubuntu.com>
        * docs/help/table/C/gchemtable.xml: miscellaneous typo and style fixes.
	
2008-10-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/fragment.cc: check if Fragment::m_Atom is not NULL before
	using it.

2008-10-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.9.99).

2008-10-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/table/gchemtable-curve.cc: sets the application as owner for
	the dialog (fixes a memory leak), and add help support to the graph guru.
	* programs/table/gchemtable-data.cc: fix minimum and maximum for a series
	when the first element is not a number.
	* docs/help/table/C/gchemtable.xml: partially update documentation.
	* docs/help/table/C/figures/*.png: new updated screenshots.

2008-10-19  Jean Bréfort  <jean.brefort@normalesup.org>
	* docs/help/table/C/gchemtable.xml: partially update documentation.
	* docs/help/table/C/figures/*.png: new or updated screenshots.
	